--- a/gadc.html
+++ b/gadc.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="gadc.css"/>
     <title>GIS Applications Development Center</title>
+    <link rel="icon" href="icon.png" sizes="32x32" type="image/png">
+    <
 </head>
 <body>
     
